platform/kubernetes/base/api-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rental-dev
  labels:
    environment: dev
    project: rentalAppLedger
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: rental-qa
  labels:
    environment: qa
    project: rentalAppLedger
    istio-injection: enabled
